--- a/src/style.css
+++ b/src/style.css
@@ -36,3 +36,11 @@ html, body, #app {
 .pt-safe {
   padding-top: env(safe-area-inset-top);
 }
+
+.pb-safe {
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
+.header-safe {
+  padding-top: env(safe-area-inset-top);
+}
